--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-image" src="images/_DSC9535.JPG" alt="titel-image">
+          <img class="title-image" src="images/gstitle.JPG" alt="titel-image">
         </div>
 
       </div>
@@ -136,7 +136,7 @@
 
       <div class="row">
         <div class="feature-box col-lg-3">
-          <img class="product-images"src="images/_DSC9598.png" alt="">
+          <img class="product-images"src="images/compression.png" alt="">
           <h3 class="feature-title">Compression</h3>
         </div>
 
@@ -151,7 +151,7 @@
         </div>
 
         <div class="feature-box col-lg-3">
-          <img class="product-images"src="images/_DSC9382.JPG" alt="">
+          <img class="product-images"src="images/wireforms.JPG" alt="">
           <h3 class="feature-title">Wireforms</h3>
         </div>
       </div>
